@startuml classDiagram
package "CRM Context" {
entity Customer <<Aggregate Root>> {
-id : CustomerId
--
-name : String
-email : String
-address : Address
--
+updateContactInfo(email, address)
}
}

package "Sales Context" {
entity SalesOrder <<Aggregate Root>> {
-id : UUID
--
-customerId : CustomerId
-orderDate : LocalDateTime
-items : List<SalesOrderItem>
-totalAmount : Money
--
+addItem(productId, quantity, unitPrice)
+calculateTotalAmount()
}

entity SalesOrderItem <<Entity>> {
-productId : ProductId
-quantity : int
-unitPrice : Money
--
+calculateSubtotal()
}

class ProductId <<Value Object>> {
-value : UUID
}
}

package "Shared Context" {
class Money <<Value Object>> {
-amount : BigDecimal
-currency : Currency
--
+add(other)
+multiply(multiplier)
}

class Address <<Value Object>> {
-street : String
-city : String
-postalCode : String
-country : String
}

class CustomerId <<Value Object>> {
-value : UUID
}
}

Customer o--> "1" Address
SalesOrder o--> "1" CustomerId
Customer o--> "1" CustomerId
SalesOrder *--> "many" SalesOrderItem : manages
SalesOrderItem o--> "1" Money
SalesOrderItem o--> "1" ProductId
SalesOrder o--> "1" Money
@enduml